--- a/src/Adstacy/UserBundle/Resources/public/less/layout.less
+++ b/src/Adstacy/UserBundle/Resources/public/less/layout.less
@@ -1,25 +1,25 @@
-.form-container {
-  margin: 0 auto;
-  max-width: 400px;
+// .form-container {
+//   margin: 0 auto;
+//   width: 400px;
 
-  h1 {
-    text-align: center;
-  }
+//   h1 {
+//     text-align: center;
+//   }
 
-  .form-control {
-    margin: 10px auto;
-  }
-}
+//   .form-control {
+//     margin: 10px auto;
+//   }
+// }
 
-.social-login, .user-login {
-  padding: 20px;
-  border-bottom: 1px solid #ccc;
-}
+// .social-login, .user-login {
+//   padding: 20px;
+//   border-bottom: 1px solid #ccc;
+// }
 
-.form-footer {
-  padding: 20px;
-}
+// .form-footer {
+//   padding: 20px;
+// }
 
-.btn-block + .btn-block {
-  margin-top: 10px;
-}
+// .btn-block + .btn-block {
+//   margin-top: 10px;
+// }
