--- a/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
@@ -5,14 +5,14 @@
     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}">
 
     <label for="username" class="hide">{{ 'security.login.username'|trans }}</label>
-    <input type="text" class="form-control input-lg" id="username" name="_username" required="required" placeholder="Username">
+    <input type="text" class="form-control input-sm" id="username" name="_username" required="required" placeholder="Username">
 
     <label for="password" class="hide">{{ 'security.login.password'|trans }}</label>
-    <input type="password" class="form-control input-lg" id="password" name="_password" required="required" placeholder="Password">
+    <input type="password" class="form-control input-sm" id="password" name="_password" required="required" placeholder="Password">
 
     <input type="checkbox" id="remember_me" name="_remember_me" value="on">
     <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
 
-    <input type="submit" class="btn btn-block btn-primary btn-lg pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
+    <input type="submit" class="btn btn-primary btn-sm pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
   </div>
 </form>
