--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -6,7 +6,7 @@ body {
   margin: 0 auto 14px auto;
 }
 
-#header-container {
+.header-container {
   margin: auto;
 }
 
@@ -60,6 +60,100 @@ body {
   }
 }
 
-#main-header .navbar-right .dropdown-menu {
-  padding: 20px;
+// -------------------------------------------
+
+.form-container, .dropdown-container {
+  .form-control {
+    margin: 10px auto;
+  }
 }
+
+.form-container {
+  margin: 0 auto;
+  width: 400px;
+
+  h1 {
+    text-align: center;
+  }
+
+  div {
+    padding: 20px;
+    border-bottom: 1px solid @border-color;
+
+    &:last-child {
+      border-bottom: 0;
+    }
+  }
+}
+
+.dropdown-container {
+  width: 200px;
+
+  .social-login > a {
+    color: white;
+  }
+
+  .form-footer {
+    display: inline;
+
+    a {
+      color: @brand-primary;
+      &:hover {
+        text-decoration: underline;
+        background-color: white;
+        color: black;
+        // color: @brand-primary;
+      }
+    }
+  }
+
+  > li {
+    padding: 10px;
+  }
+}
+
+.btn-block + .btn-block {
+  margin-top: 10px;
+}
+
+// -------------------------------
+.nav-expand-wrapper {
+  position: relative;
+}
+
+.nav-expand-wrapper.scroll-to-fixed-fixed {
+  // kinda hack
+  width: 100% !important ;
+}
+
+.nav-expand-inner {
+  position: absolute;
+  padding: 20px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #000;
+  z-index: 1000;
+}
+
+ul.nav-expand {
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  line-height: 1.5;
+  overflow: hidden;
+  max-height: 9em;
+
+  li {
+    margin: 0 7px;
+    width: 236px;
+    float: left;
+  }
+}
+
+#nav-expand-container {
+  padding: 10px 0;
+  border-top: 1px solid @border-color;
+}
+
