--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
     {% block body %}
       <header id="main-header">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-          <div class="header-container">
+          <div class="header-container masonry-container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -140,11 +140,13 @@
         </nav>
       </header>
       <div class="body clearfix">
+        <div class="masonry-container">
         {% for key, flashes in app.session.flashbag.all() %}
           {% for flash in flashes %}
             <div class="alert alert-{{ key }}">{{ flash }}</div>
           {% endfor %}
         {% endfor %}
+        </div>
 
         {% block content %}{% endblock %}
       </div>
@@ -153,7 +155,7 @@
     {% block javascripts %}
       <script type="text/javascript">
         var $masonry = $('.masonry');
-        var $headerContainer = $('.header-container');
+        var $masonryContainer = $('.masonry-container');
         $masonry.masonry({
           columnWidth: 250,
           isFitWidth: true,
@@ -162,7 +164,7 @@
           itemSelector: '.ad'
         });
         $masonry.masonry('on', 'layoutComplete', function(msnryInstance) {
-          $headerContainer.css('width', msnryInstance.cols * msnryInstance.columnWidth + 'px');
+          $masonryContainer.css('width', msnryInstance.cols * msnryInstance.columnWidth + 'px');
         });
         $masonry.masonry();
 
