--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -76,6 +76,7 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ app.user.username }}<b class="caret"></b></a>
                     <ul class="dropdown-menu">
+                      <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}">Profile</a></li>
                       <li><a href="{{ path('fos_user_profile_edit') }}">Settings</a></li>
                       <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                     </ul>
