Design change password page.

--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,9 +1,50 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
-{% block content %}
-  {{ form_start(form) }}
-      {{ form_rest(form) }}
+{% block stylesheets %}
+  {{ parent() }}
+  {% stylesheets filter='cssrewrite, uglifycss'
+    'bundles/adstacyuser/less/settings.less'
+  %}
+    <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
+  {% endstylesheets %}
+{% endblock %}
 
-      <input type="submit" value="Change password" />
-  {{ form_end(form) }}
+{% block content %}
+  <div class="settings-container panel panel-default">
+    <section class="settings-section">
+      <h1>Change Password</h1>
+      {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
+        <div class="form-group">
+          {{ form_label(form.current_password, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.current_password, { attr: { class: 'form-control' } }) }}
+          </div>
+        </div>
+
+        <div class="form-group">
+          {{ form_label(form.plainPassword.newPassword, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.plainPassword.newPassword, { attr: { class: 'form-control' } }) }}
+          </div>
+        </div>
+
+        <div class="form-group">
+          {{ form_label(form.plainPassword.newPasswordConfirmation, label|default(null), { label_attr: { class: 'control-label' } }) }}
+          <div class="form-widget">
+            {{ form_widget(form.plainPassword.newPasswordConfirmation, { attr: { class: 'form-control' } }) }}
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="control-label">&nbsp;</label>
+          <div class="form-widget">
+            {{ form_widget(form.save, { attr: { class: 'form-control btn btn-primary' } }) }}
+          </div>
+        </div>
+
+        {{ form_rest(form) }}
+
+      {{ form_end(form) }}
+    </section>
+  </div>
 {% endblock %}
