build register page.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -54,4 +54,5 @@
 @import "./variables.less";
 @import "./mixins.less";
 @import "./overrides.less";
+@import "./utilities.less";
 @import "./base/layout.less";
