--- a/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
@@ -10,9 +10,14 @@
     <label for="password" class="hide">{{ 'security.login.password'|trans }}</label>
     <input type="password" class="form-control input-sm" id="password" name="_password" required="required" placeholder="Password">
 
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on">
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-
-    <input type="submit" class="btn btn-primary btn-sm pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
+    <div class="table-block">
+      <div class="span2of3">
+        <input type="checkbox" id="remember_me" name="_remember_me" value="on">
+        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+      </div>
+      <div class="span1of3">
+        <input type="submit" class="btn btn-primary btn-sm pull-right" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}">
+      </div>
+    </div>
   </div>
 </form>
