Wrong selector on search back jscroll callback.

--- a/src/Adstacy/AppBundle/Resources/views/App/search.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/search.html.twig
@@ -14,7 +14,7 @@
         nextSelector: 'a.next-page',
         callback: function(a, b) {
           var $ads = $('.jscroll-added:last .ad');
-          $masonry = $('#ads').masonry('appended', $ads);
+          $masonry = $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
         }
       });
