Add FileAPI for image upload preview.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -157,3 +157,11 @@ ul.nav-expand {
   border-top: 1px solid @border-color;
 }
 
+.image-preview {
+  width: 234px;
+  height: 234px;
+  background-color: #fff;
+  img {
+    max-height: 500px;
+  }
+}
