--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,6 +33,7 @@
         '@AdstacyAppBundle/Resources/public/js/masonry.pkgd.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.lazyload.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.jscroll.js'
+        '@AdstacyAppBundle/Resources/public/js/FileAPI.min.js'
         '@AdstacyAppBundle/Resources/public/js/module/promote.js'
         'bundles/fosjsrouting/js/router.js'
       %}
