--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -65,7 +65,7 @@
     {% block body %}
       <header id="main-header">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-          <div class="header-container masonry-container">
+          <div class="masonry-container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -73,7 +73,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{ path('homepage') }}">Brand</a>
+              <a class="navbar-brand" href="{{ path('homepage') }}">Adstacy</a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -122,39 +122,39 @@
             </div>
           </div>
           <div id="nav-expand-container" class="hide">
-            <ul class="header-container nav-expand">
-              <li><a href="#">Komputer</a></li>
-              <li><a href="#">Handphone</a></li>
-              <li><a href="#">Kuliner</a></li>
-              <li><a href="#">Pendidikan</a></li>
-              <li><a href="#">Tempat Tinggal</a></li>
-              <li><a href="#">Otomotif</a></li>
-              <li><a href="#">Rumah Sakit</a></li>
-              <li><a href="#">Tempat Wisata</a></li>
-              <li><a href="#">Komputer</a></li>
-              <li><a href="#">Handphone</a></li>
-              <li><a href="#">Kuliner</a></li>
-              <li><a href="#">Pendidikan</a></li>
-              <li><a href="#">Tempat Tinggal</a></li>
-              <li><a href="#">Otomotif</a></li>
-              <li><a href="#">Rumah Sakit</a></li>
-              <li><a href="#">Tempat Wisata</a></li>
-              <li><a href="#">Komputer</a></li>
-              <li><a href="#">Handphone</a></li>
-              <li><a href="#">Kuliner</a></li>
-              <li><a href="#">Pendidikan</a></li>
-              <li><a href="#">Tempat Tinggal</a></li>
-              <li><a href="#">Otomotif</a></li>
-              <li><a href="#">Rumah Sakit</a></li>
-              <li><a href="#">Tempat Wisata</a></li>
-              <li><a href="#">Komputer</a></li>
-              <li><a href="#">Handphone</a></li>
-              <li><a href="#">Kuliner</a></li>
-              <li><a href="#">Pendidikan</a></li>
-              <li><a href="#">Tempat Tinggal</a></li>
-              <li><a href="#">Otomotif</a></li>
-              <li><a href="#">Rumah Sakit</a></li>
-              <li><a href="#">Tempat Wisata</a></li>
+            <ul class="masonry-container nav-expand">
+              <li><a href="#">#Komputer</a></li>
+              <li><a href="#">#Handphone</a></li>
+              <li><a href="#">#Kuliner</a></li>
+              <li><a href="#">#Pendidikan</a></li>
+              <li><a href="#">#TempatTinggal</a></li>
+              <li><a href="#">#Otomotif</a></li>
+              <li><a href="#">#RumahSakit</a></li>
+              <li><a href="#">#TempatWisata</a></li>
+              <li><a href="#">#Komputer</a></li>
+              <li><a href="#">#Handphone</a></li>
+              <li><a href="#">#Kuliner</a></li>
+              <li><a href="#">#Pendidikan</a></li>
+              <li><a href="#">#TempatTinggal</a></li>
+              <li><a href="#">#Otomotif</a></li>
+              <li><a href="#">#RumahSakit</a></li>
+              <li><a href="#">#TempatWisata</a></li>
+              <li><a href="#">#Komputer</a></li>
+              <li><a href="#">#Handphone</a></li>
+              <li><a href="#">#Kuliner</a></li>
+              <li><a href="#">#Pendidikan</a></li>
+              <li><a href="#">#TempatTinggal</a></li>
+              <li><a href="#">#Otomotif</a></li>
+              <li><a href="#">#RumahSakit</a></li>
+              <li><a href="#">#TempatWisata</a></li>
+              <li><a href="#">#Komputer</a></li>
+              <li><a href="#">#Handphone</a></li>
+              <li><a href="#">#Kuliner</a></li>
+              <li><a href="#">#Pendidikan</a></li>
+              <li><a href="#">#TempatTinggal</a></li>
+              <li><a href="#">#Otomotif</a></li>
+              <li><a href="#">#RumahSakit</a></li>
+              <li><a href="#">#TempatWisata</a></li>
             </ul>
           </div>
         </nav>
