Add profile picture to user.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -158,10 +158,10 @@ ul.nav-expand {
 }
 
 .image-preview {
-  width: 234px;
-  height: 234px;
-  background-color: #fff;
-  img {
+  &.medium img {
     max-height: 500px;
+  }
+  &.small img {
+    max-height: 200px;
   }
 }
