--- a/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Form/fields.html.twig
@@ -3,7 +3,7 @@
 {% block image_widget %}
 <input class="image-upload" type="file" {{ block('widget_attributes') }}>
 
-<div class="image-preview">
+<div class="image-preview {{ image_size }}">
   {% if image %}
     <img src="{{ vich_uploader_asset(image, 'file') }}" />
   {% else %}
