--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -1,6 +1,9 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
 {% block content %}
+  <a href="https://twitter.com/share" class="twitter-share-button" data-related="adstacy">Tweet</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  <div class="fb-like" data-width="450" data-show-faces="false" data-send="false"></div>
   <p>{{ parse_hashtag(ad.description) }} ({{ ad.promoteesCount }}) promotes</p>
   <a class="btn btn-primary btn-wall" href="{{ path('adstacy_app_wall_show', {id: ad.wall.id}) }}">{{ ad.wall.name }}</a>
   <img src="{{ vich_uploader_asset(ad.image, 'file') }}" alt="{{ ad.description }}" />
