--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -1,5 +1,9 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
+{% block title %}{{ ad.description }} | Adstacy{%endblock %}
+
+{% block meta_keywords %}{{ ad.tags | join(',') }}{% endblock %}
+
 {% block content %}
   <a href="https://twitter.com/share" class="twitter-share-button" data-related="adstacy">Tweet</a>
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
