--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -128,7 +128,7 @@ ul.nav-expand {
   }
 }
 
-#nav-expand-container {
+#navbar-expand-container {
   padding: 10px 0;
   border-top: 1px solid @border-color;
 }
