--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,6 +22,19 @@
     {% endblock %}
 
     {% block head_scripts %}
+      {% if not app.debug %}
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.1/masonry.pkgd.min.js" type="text/javascript"></script>
+      {% else %}
+        {% javascripts filter='uglifyjs2'
+          '@AdstacyAppBundle/Resources/public/js/jquery.min.js'
+          '@AdstacyAppBundle/Resources/public/js/bootstrap.min.js'
+          '@AdstacyAppBundle/Resources/public/js/masonry.pkgd.min.js'
+        %}
+          <script src="{{ asset_url }}" type="text/javascript"></script>
+        {% endjavascripts %}
+      {% endif %}
       {% javascripts filter='uglifyjs2'
         '@AdstacyAppBundle/Resources/public/js/modernizr.min.js'
         '@AdstacyAppBundle/Resources/public/js/jquery.min.js'
