use promote button.

--- a/src/Adstacy/AppBundle/Resources/views/Includes/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Includes/ad.html.twig
@@ -3,7 +3,7 @@
     <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
     <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
       data-original="{{ vich_uploader_asset(ad.image, 'file')|imagine_filter('thumbnail') }}"
-      width="{{ thumb_width }}px" height="{{ ad.thumbHeight }}px" alt="testing">
+      width="{{ thumb_width }}px" height="{{ ad.thumbHeight }}px">
     </a>
   </div>
   <div class="desc">
@@ -11,9 +11,13 @@
     <div>
       <span><span class="promotes-count">{{ ad.promoteesCount }}</span> promotes</span>
       {% if app.user and app.user.hasPromote(ad) %}
-        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="unpromote">Unpromote</a>
+        <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary unpromote">
+          <span aria-hidden="true" class="icon-thumbs-down"> Unpromote
+        </a>
       {% else %}
-        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="promote">Promote</a>
+        <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default promote">
+          <span aria-hidden="true" class="icon-thumbs-up"> Promote
+        </a>
       {% endif %}
     </div>
   </div>
