--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -68,13 +68,7 @@
   </head>
   <body>
     <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_GB/all.js#xfbml=1&appId=138676862997429";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+    {% block facebook_scripts %}{% endblock %}
     {% block body %}
       <header id="main-header">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
